test/types/cptr/c-ptr-void-deref-1.good
c-ptr-void-deref-1.chpl:6: error: Cannot dereference a void pointer; cast to a non-opaque pointee type first.
